--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Entrega1">
-        <activity android:name=".PeliculaActivity"></activity>
-        <activity android:name=".CatalogoActivity">
+        <activity android:name=".Actividades.FavoritosActivity"></activity>
+        <activity android:name=".Actividades.CatalogoActivity" />
+        <activity android:name=".Actividades.PeliculaActivity" />
+        <activity android:name=".Actividades.BienvenidaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
