--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+    implementation 'androidx.preference:preference:1.1.1'
+
 
 
 
