--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Actividades.PeliculaActivity"></activity>
+        <activity android:name=".Actividades.CatalogoActivity" />
         <activity android:name=".Actividades.ComentariosActivity" />
         <activity android:name=".Actividades.RegisterActivity" />
         <activity android:name=".Actividades.BienvenidaActivity" />
         <activity android:name=".Actividades.FavoritosActivity" />
         <activity android:name=".Actividades.VerMasTardeActivity" />
-        <activity android:name=".Actividades.CatalogoActivity" />
-        <activity android:name=".Actividades.PeliculaActivity" />
         <activity android:name=".Actividades.ToolbarActivity" />
         <activity android:name=".Actividades.LoginActivity">
             <intent-filter>
