--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/CustomTheme">
+
         <activity android:name=".Actividades.PeliculaActivity"></activity>
         <activity android:name=".Actividades.CatalogoActivity" />
         <activity android:name=".Actividades.ComentariosActivity" />
         <activity android:name=".Actividades.RegisterActivity" />
-        <activity android:name=".Actividades.BienvenidaActivity" />
+        <activity android:name=".Actividades.MainActivity"
+            android:theme="@style/CustomThemeParaMain"/>
         <activity android:name=".Actividades.FavoritosActivity" />
         <activity android:name=".Actividades.VerMasTardeActivity" />
         <activity android:name=".Actividades.ToolbarActivity" />
@@ -29,6 +31,9 @@
         </activity>
 
         <receiver android:name=".AlertReceiver" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
