--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
 
     <application
         android:allowBackup="true"
@@ -11,14 +13,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme">
+        android:theme="@style/Theme.Entrega1">
 
         <activity android:name=".Actividades.PeliculaActivity"></activity>
         <activity android:name=".Actividades.CatalogoActivity" />
         <activity android:name=".Actividades.ComentariosActivity" />
         <activity android:name=".Actividades.RegisterActivity" />
         <activity android:name=".Actividades.MainActivity"
-            android:theme="@style/CustomThemeParaMain"/>
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".Actividades.FavoritosActivity" />
         <activity android:name=".Actividades.VerMasTardeActivity" />
         <activity android:name=".Actividades.ToolbarActivity" />
@@ -30,7 +32,15 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".AlertReceiver" />
+        <receiver android:name=".Alarmas.AlarmReceiver" />
+
+        <service android:name=".Alarmas.BootService"/>
+
+        <receiver android:name=".Alarmas.RestartAlarmsReceiver" android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
         <meta-data
             android:name="preloaded_fonts"
