--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,19 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.entrega1">
 
+    <!-- Permiso para realizar peticiones HTTP mediante 'Volley' -->
     <uses-permission android:name="android.permission.INTERNET" />
+    <!-- Permiso para acceder a la vibración del dispositivo -->
     <uses-permission android:name="android.permission.VIBRATE" />
+    <!-- Permiso para recibir acción tras arrancar el sistema -->
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
 
@@ -23,7 +26,6 @@
             android:theme="@style/CustomThemeParaMain"/>
         <activity android:name=".Actividades.FavoritosActivity" />
         <activity android:name=".Actividades.VerMasTardeActivity" />
-        <activity android:name=".Actividades.ToolbarActivity" />
         <activity android:name=".Actividades.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,16 +34,17 @@
             </intent-filter>
         </activity>
 
+        <!-- Bradcast Receiver para la alarma de las notificaciones -->
         <receiver android:name=".Alarmas.AlarmReceiver" />
 
-        <service android:name=".Alarmas.BootService"/>
-
+        <!-- Broadcast Receiver para detectar cuando se ha arrancado el sistema-->
         <receiver android:name=".Alarmas.RestartAlarmsReceiver" android:enabled="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
+        <!-- Fuentes personalizadas -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
